--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1, h2, h3{
 
 .img-topo {
     min-height: 500px;
-    background-image: url('/img/capa.jpg');
+    background-image: url('img/capa.jpg');
     background-size: cover;
 }
 .secao-background-conteudo {
