--- a/style.css
+++ b/style.css
@@ -75,25 +75,30 @@ h1, h2, h3{
     
     p {
         font-size: 16px;
+        margin: 20px 10px;
     }
+
 
     a {
         font-size: 14px;
         padding: 8px 12px;
     }
 }
-
-@media (max-width: 768px) {
-    h1, h2, h3 {
-        margin: 20px 10px;
-        padding: 8px;
-    }
-
-    p {
-        margin: 20px 10px;
-    }
-
-    div {
-        width: 95%;
-    }
+.img-conteudo{
+    width: 100%;
+    height: auto;
 }
+
+.secao-background-conteudo, .secao-conteudo {
+    padding: 20px;
+}
+
+.img-topo  {
+    min-height:  300px;
+}
+
+.img-atuacao h3 {
+    font-size: 24px;
+}
+
+
